# fastmcp-course

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PRD.md  README.md  blog.md  check_python.py  client-with-OIDC-token.py  client-with-local-proxy.py  config.py  deploy.sh  mcp.md  mcp_2.md  pyproject.toml  server-dev.py  server.py  tactiq-free-transcript-L94WBLL0KjY.txt  transcript.md  update_coverage_badge.py
.github/prompts/: decorating-methods.prompt.md  planning.prompt.md  script-instructions.md
.github/workflows/: coverage.yml
confluence/: __init__.py  client.py  models.py  utils.py
confluence_fastmcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
instructions/: instruct-project1.md  instruct-project2.md  instruct-project3.md
tests/: conftest.py  test_client.py  test_config.py  test_server.py  test_tools.py  test_update_coverage_badge.py  test_utils.py
tools/: __init__.py  comment_tools.py  page_tools.py  search_tools.py
transcripts/: transcript-project2.md  transcript-project3.md
